--- a/IncidenceMatrixAreUnimodular/IncidenceMatrixAreUnimodular.tex
+++ b/IncidenceMatrixAreUnimodular/IncidenceMatrixAreUnimodular.tex
@@ -1,7 +1,7 @@
-﻿\chapter{Adjacency Matrix Of Bipartite Graphs Are Unimodular}
-\label{AdjacencyMatrixOfBipartiteGraphsAreUnimodular}
+﻿\chapter{Incidence Matrix Of Bipartite Graphs Are Unimodular}
+\label{IncidenceMatrixOfBipartiteGraphsAreUnimodular}
 \prob{
-    Let $G = (V, E)$ be a bipartite graph. And let $M$ be its adjacency matrix.
+    Let $G = (V, E)$ be a bipartite graph. And let $M$ be its incidence matrix.
     Prove that if $A$ is a square submatrix of $M$ then $det(A) \in \{0, -1, 1\}$.
 }
 
