--- a/IncidenceMatrixOfDirectedGraphsAreUnimodular/IncidenceMatrixOfDirectedGraphsAreUnimodular.tex
+++ b/IncidenceMatrixOfDirectedGraphsAreUnimodular/IncidenceMatrixOfDirectedGraphsAreUnimodular.tex
@@ -1,16 +1,16 @@
-﻿\chapter{Adjacency Matrix Of Directed Graphs Are Unimodular}
+﻿\chapter{Incidence Matrix Of Directed Graphs Are Unimodular}
 
 \prob{
-    Let $G = (V, E)$ be a directed graph. And let $M$ be its adjacency matrix.
+    Let $G = (V, E)$ be a directed graph. And let $M$ be its incidence matrix.
     Prove that if $A$ is a square submatrix of $M$ then $det(A) \in \{0, -1, 1\}$.
 }
 
 \begin{proof}
-    The proof of this statement is completily analog to the one of [\ref{AdjacencyMatrixOfBipartiteGraphsAreUnimodular}].\pn
+    The proof of this statement is completily analog to the one of [\ref{IncidenceMatrixOfBipartiteGraphsAreUnimodular}].\pn
     
     Again, the proof will be by induction over the dimension $n$ of $A$.\pn
     
-    If $n=1$, then the statement is straightforward true as the entries of an adjacency matrix of a directed graph are always
+    If $n=1$, then the statement is straightforward true as the entries of an incidence matrix of a directed graph are always
     $1$, $-1$ or $0$. Then its determintant will be $1$, $-1$ or $0$ respectivelly.\pn
     
     Now, suppose that the statement is true for $n \geq 1$ and let $A$ be a $(n+1) \times (n+1)$ submatrix of $M$.\pn
