--- a/PetersenIsNotHamiltonian/PetersenIsNotHamiltonian.tex
+++ b/PetersenIsNotHamiltonian/PetersenIsNotHamiltonian.tex
@@ -13,7 +13,7 @@
             \includegraphics[width=7cm]{PetersenIsNotHamiltonian/Petersen1.png}    
         \end{center}\pn
         
-        Notice that Petersen's graph is \textbf{cubic}, that is, each vertex is of degree three.\pn 
+        Notice that Petersen's graph is \textbf{cubic}, that is, each vertex has degree three.\pn 
 
         Notice that any cubic graph must have an even number of vertices, because, if we call $n$ to the number of vertices, 
         the number of edges must be $\frac{3n}{2}$, since this number is integer, $n$ must be even.\pn
