Adding test guide and the first answers.

--- a/document.tex
+++ b/document.tex
@@ -8,7 +8,7 @@
 
 \mainmatter
 \input{NoteForTheReaders/NoteForTheReaders.tex}
-\input{AdjacencyMatrixAreUnimodular/AdjacencyMatrixAreUnimodular.tex}
+\input{IncidenceMatrixAreUnimodular/IncidenceMatrixAreUnimodular.tex}
 \input{DeMorgansLawSetTheory/DeMorgansLawSetTheory.tex}
 \input{DeMorgansLawsOrthogonalComplement/DeMorgansLawsOrthogonalComplement.tex}
 \input{OptimalAssignmentExample/OptimalAssignmentExample.tex}
@@ -19,5 +19,6 @@
 \input{ComplementaryVectorSpaces2/ComplementaryVectorSpaces2.tex}
 \input{PermutohedronVerticesAsPolymatroid/PermutohedronVerticesAsPolymatroid.tex}
 \input{Simplex/Simplex.tex}
-\input{AdjacencyMatrixOfDirectedGraphsAreUnimodular/AdjacencyMatrixOfDirectedGraphsAreUnimodular.tex}
+\input{IncidenceMatrixOfDirectedGraphsAreUnimodular/IncidenceMatrixOfDirectedGraphsAreUnimodular.tex}
 \input{ShortestPath/ShortestPath.tex}
+\input{Guide/Guide.tex}
