Adding 8 new exercises.

--- a/Guide/Guide.tex
+++ b/Guide/Guide.tex
@@ -43,60 +43,68 @@
                         \item[iii.] \frameme{Independence.}
                     \end{itemize}
 
-        \item[f]
+        \item[f] If $A$ is a graph's incidence matrix. Then, for every $B$ sqare submatrex of $A$, 
+                 $\det(B)$ belongs to:
                     \begin{itemize}
-                        \item[i.]
-                        \item[ii.]
-                        \item[iii.]
+                        \item[i.] $\{-1, 0, 1\}$.
+                        \item[ii.] $\{-1, \frac{-1}{2}, 0, \frac{1}{2}, 1\}$.
+                        \item[iii.] \frameme{$\{-2, -1, \frac{-1}{2}, 0, \frac{1}{2}, 1, 2\}$.}
                     \end{itemize}
 
-        \item[g]
+        \item[g] A rank function $r$ of a matroid satisfies one of the following properties for every
+                subsets $A, B$.
                     \begin{itemize}
-                        \item[i.]
-                        \item[ii.]
-                        \item[iii.]
+                        \item[i.] $r(A) + r(B) = r(A \cup B) + r(A \cap B)$.
+                        \item[ii.] $r(A) + r(B) \leq r(A \cup B) + r(A \cap B)$.
+                        \item[iii.] \frameme{$r(A) + r(B) \geq r(A \cup B) + r(A \cap B)$.}
                     \end{itemize}
 
-        \item[h]
+        \item[h] A linear programming problem of the form $\min cx, Ax = b, x \geq 0$ is degenerated if
                     \begin{itemize}
-                        \item[i.]
-                        \item[ii.]
-                        \item[iii.]
+                        \item[i.] There is no basic soltion in which a basic variable is zero.
+                        \item[ii.] \frameme{There is a basic factible solution in which a basic variable is zero.} 
+                        \item[iii.] In a basic factible solution a non-basic variable is zero.
                     \end{itemize}
 
-        \item[i]
+        \item[i] A graphic is bipartite if and only if
                     \begin{itemize}
-                        \item[i.]
-                        \item[ii.]
-                        \item[iii.]
+                        \item[i.] It doesn't contain triangles.
+                        \item[ii.] \frameme{It doesn't contain odd cycles.}
+                        \item[iii.] It doesn't contain a complete graph with four vertices.
                     \end{itemize}
 
-        \item[j]
+        \item[j] If the propositions $x \in A$, $z \in B$ can be verified in polinomial time.
+                 And if there is a theorem that states: there exists $x \in A$ or there exists
+                 $z \in B$, but not both ($\exists x \in A \Leftrightarrow \not\exists z \in B$).
+                Then, to find $x \in A$ is a problem in the class:
                     \begin{itemize}
-                        \item[i.]
-                        \item[ii.]
-                        \item[iii.]
+                        \item[i.] $P$.
+                        \item[ii.] \frameme{$NP \cap Co-NP$.} 
+                        \item[iii.] $NP-complete$.
                     \end{itemize}
 
-        \item[k]
+        \item[k] A graph is a tree if and only if
                     \begin{itemize}
-                        \item[i.]
-                        \item[ii.]
-                        \item[iii.]
+                        \item[i.] It doesn't contain cycles.
+                        \item[ii.] Is connected.
+                        \item[iii.] \frameme{Is connected and it doesn't contain cycles.}
                     \end{itemize}
 
-        \item[l]
+        \item[l] If $G = (V, E)$ is a graph with $k$ connected components, the rank of $E$ in the
+                 graphic matroid is
                     \begin{itemize}
-                        \item[i.]
-                        \item[ii.]
-                        \item[iii.]
+                        \item[i.] $|V|$.
+                        \item[ii.] $2k$.
+                        \item[iii.] \frameme{$|V| - k$.}
                     \end{itemize}
 
         \item[m]
+                 Let $G = (V, E)$ be a directed graph with two distinguished vertices $s$ and $t$. The
+                 blocking cutter for the $s-t$-trayectories is
                     \begin{itemize}
-                        \item[i.]
-                        \item[ii.]
-                        \item[iii.]
+                        \item[i.] The set of directed cycles that contain $s$ and $t$.
+                        \item[ii.] The set of directed trees with root $s$.
+                        \item[iii.] \frameme{the set of directed cuts that separate $s$ and $t$.}
                     \end{itemize}
 
         \item[n]
