Solving theory part.

--- a/Guide/Guide.tex
+++ b/Guide/Guide.tex
@@ -8,42 +8,42 @@
 \begin{proof}
     The answers are inside a rectangle.
     \begin{itemize}
-        \item[a] Hall's theorem and Frobenius' theorem
+        \item[(a)] Hall's theorem and Frobenius' theorem
                     \begin{itemize}
                         \item[i.] Are not related.
                         \item[ii.] \frameme{Are equivalent.}
                         \item[iii.] One of them implies the other one, but the converse is not true.
                     \end{itemize}
 
-        \item[b] The vertices of the polyhedron of matrices doubly stochastic are
+        \item[(b)] The vertices of the polyhedron of matrices doubly stochastic are
                     \begin{itemize}
                         \item[i.] Orthogonal matrices.
                         \item[ii.] The non-singular 0-1 matrices.
                         \item[iii.] \frameme{Permutation matrices.}
                     \end{itemize}
 
-        \item[c] A point $x_0$ of a polyhedron P is a vertex if
+        \item[(c)] A point $x_0$ of a polyhedron P is a vertex if
                     \begin{itemize}
-                        \item[i.] \frameme{There exists a lineal function that is optimal (maximal or minimal) at $x_0$.}
+                        \item[i.] \frameme{There exists a lineal function that is optimal (maximum or minimum) at $x_0$.}
                         \item[ii.] Every lineal function is minimized at $x_0$.
                         \item[iii.] No lineal function is minimzed at $x_0$.
                     \end{itemize}
 
-        \item[d] If the factible region of a linear programming problem is empty then
+        \item[(d)] If the factible region of a linear programming problem is empty then
                     \begin{itemize}
                         \item[i.] The factible region of the dual problem is also empty.
                         \item[ii.] The dual problem has an optimal solution.
                         \item[iii.] \frameme{The dual problem is unbounded.}
                     \end{itemize}
 
-        \item[e] A matroid generalized the idea of
+        \item[(e)] A matroid generalized the idea of
                     \begin{itemize}
                         \item[i.] Convexity.
                         \item[ii.] Polyhedrons.
                         \item[iii.] \frameme{Independence.}
                     \end{itemize}
 
-        \item[f] If $A$ is a graph's incidence matrix. Then, for every $B$ sqare submatrex of $A$, 
+        \item[(f)] If $A$ is a graph's incidence matrix. Then, for every $B$ sqare submatrex of $A$, 
                  $\det(B)$ belongs to:
                     \begin{itemize}
                         \item[i.] $\{-1, 0, 1\}$.
@@ -51,7 +51,7 @@
                         \item[iii.] \frameme{$\{-2, -1, \frac{-1}{2}, 0, \frac{1}{2}, 1, 2\}$.}
                     \end{itemize}
 
-        \item[g] A rank function $r$ of a matroid satisfies one of the following properties for every
+        \item[(g)] A rank function $r$ of a matroid satisfies one of the following properties for every
                 subsets $A, B$.
                     \begin{itemize}
                         \item[i.] $r(A) + r(B) = r(A \cup B) + r(A \cap B)$.
@@ -59,21 +59,21 @@
                         \item[iii.] \frameme{$r(A) + r(B) \geq r(A \cup B) + r(A \cap B)$.}
                     \end{itemize}
 
-        \item[h] A linear programming problem of the form $\min cx, Ax = b, x \geq 0$ is degenerated if
+        \item[(h)] A linear programming problem of the form $\min cx, Ax = b, x \geq 0$ is degenerated if
                     \begin{itemize}
                         \item[i.] There is no basic soltion in which a basic variable is zero.
                         \item[ii.] \frameme{There is a basic factible solution in which a basic variable is zero.} 
                         \item[iii.] In a basic factible solution a non-basic variable is zero.
                     \end{itemize}
 
-        \item[i] A graphic is bipartite if and only if
+        \item[(i)] A graphic is bipartite if and only if
                     \begin{itemize}
                         \item[i.] It doesn't contain triangles.
                         \item[ii.] \frameme{It doesn't contain odd cycles.}
                         \item[iii.] It doesn't contain a complete graph with four vertices.
                     \end{itemize}
 
-        \item[j] If the propositions $x \in A$, $z \in B$ can be verified in polinomial time.
+        \item[(j)] If the propositions $x \in A$, $z \in B$ can be verified in polinomial time.
                  And if there is a theorem that states: there exists $x \in A$ or there exists
                  $z \in B$, but not both ($\exists x \in A \Leftrightarrow \not\exists z \in B$).
                 Then, to find $x \in A$ is a problem in the class:
@@ -83,14 +83,14 @@
                         \item[iii.] $NP-complete$.
                     \end{itemize}
 
-        \item[k] A graph is a tree if and only if
+        \item[(k)] A graph is a tree if and only if
                     \begin{itemize}
                         \item[i.] It doesn't contain cycles.
                         \item[ii.] Is connected.
                         \item[iii.] \frameme{Is connected and it doesn't contain cycles.}
                     \end{itemize}
 
-        \item[l] If $G = (V, E)$ is a graph with $k$ connected components, the rank of $E$ in the
+        \item[(l)] If $G = (V, E)$ is a graph with $k$ connected components, the rank of $E$ in the
                  graphic matroid is
                     \begin{itemize}
                         \item[i.] $|V|$.
@@ -98,71 +98,86 @@
                         \item[iii.] \frameme{$|V| - k$.}
                     \end{itemize}
 
-        \item[m]
+        \item[(m)]
                  Let $G = (V, E)$ be a directed graph with two distinguished vertices $s$ and $t$. The
                  blocking cutter for the $s-t$-trayectories is
                     \begin{itemize}
                         \item[i.] The set of directed cycles that contain $s$ and $t$.
                         \item[ii.] The set of directed trees with root $s$.
-                        \item[iii.] \frameme{the set of directed cuts that separate $s$ and $t$.}
+                        \item[iii.] \frameme{The set of directed cuts that separate $s$ and $t$.}
                     \end{itemize}
 
-        \item[n]
+        \item[(n)] A bipartite complete graph $G=(V_1, V_2, E)$ the blocking clutter for the perfect matchings is:
                     \begin{itemize}
-                        \item[i.]
-                        \item[ii.]
-                        \item[iii.]
+                        \item[i.] \frameme{The set of maximal stars.}
+                        \item[ii.] The set of odd cycles.
+                        \item[iii.] The set of trees.
                     \end{itemize}
 
-        \item[o]
+        \item[(o)] The dual problem for $\min cx, Ax = b, x \geq 0$ is
                     \begin{itemize}
-                        \item[i.]
-                        \item[ii.]
-                        \item[iii.]
+                        \item[i.] $\max yb, yA = c, y \geq 0$.
+                        \item[ii.] $\max yb, yA \geq c, y \geq 0$.
+                        \item[iii.] \frameme{$\max yb, yA \leq c$.}
                     \end{itemize}
 
-        \item[p]
+        \item[(p)] If $G = (V, E)$ is a directed graph and $\delta^-(v)$, $\gamma(S)$ are as described in class,
+                 then the linear system
+                \begin{align}
+                            x(\delta^-(v))  &\leq 1,\, v \in V          \\
+                            x(\gamma(S))    &\leq |S|-1,\, S \subset V  \\
+                            x               &\geq 0                     \\
+                \end{align}
+                Is the convex hul for
                     \begin{itemize}
-                        \item[i.]
-                        \item[ii.]
-                        \item[iii.]
+                        \item[i.] Spanning trees of $G$.
+                        \item[ii.] Arborescences of $G$.
+                        \item[iii.] \frameme{Branchings of $G$.}
                     \end{itemize}
 
-        \item[q]
+        \item[(q)] If $G = (V, E)$ is a directed graph, $r$ a distinguished vertex of $G$ and
+                 $\delta^-(S)$ is as defined in class, then the linear system
+                \begin{align}
+                            x(\delta^-(S))  &\geq 1,\, S \subset V \setminus \{r\}         \\
+                            x               &\geq 0    \\                
+                \end{align}
+                is the dominant of the convex hull of
                     \begin{itemize}
-                        \item[i.]
-                        \item[ii.]
-                        \item[iii.]
+                        \item[i.] \frameme{The spanning trees of $G$ with root $r$.}
+                        \item[ii.] The arboreschence of $G$ with root $r$.
+                        \item[iii.] The branchings of $G$ with root $r$.
                     \end{itemize}
 
-        \item[r]
+        \item[(r)] If $G = (V, E)$ is a directed graph with weighted edges and $s$ and $t$ are distinguished
+                 vertices, to find a $s-t$-trayectory with maximum weight is a polinomial problem if
                     \begin{itemize}
-                        \item[i.]
-                        \item[ii.]
-                        \item[iii.]
+                        \item[i.] There are no negative weights.
+                        \item[ii.] \frameme{The directed graph doesn't contain cycles.}
+                        \item[iii.] There are no directed cycles with negative weight.
                     \end{itemize}
 
-        \item[s]
+        \item[(s)] The fractional knapsack problem can be solved efficiently with the algorithm
                     \begin{itemize}
-                        \item[i.]
-                        \item[ii.]
-                        \item[iii.]
+                        \item[i.] Hungarian algorithm.
+                        \item[ii.] \frameme{Greedy algorithm.}
+                        \item[iii.] Transitive clousure algorithm.
                     \end{itemize}
 
-        \item[t]
+        \item[(t)] If $G = (V, E)$ is a graph and $\delta(v)$ is as defined in class. The polyhedron
+                 $P = \{ x | x(\delta(v)) \leq 1, x \geq 1 \}$, is not the convex hull for the
+                 matchinbs of $G$ because
                     \begin{itemize}
-                        \item[i.]
-                        \item[ii.]
-                        \item[iii.]
+                        \item[i.] There are matching whose incidence vectors are not basic feasible solution
+                                    for the given system.
+                        \item[ii.] \frameme{P has fractional vertices.}
+                        \item[iii.] There are integer vertices that are not incidence vectors for matchings in $G$.
                     \end{itemize}
 
-        \item[u]
+        \item[(u)] The transportation problem, the law of flow conservation must be understood as
                     \begin{itemize}
-                        \item[i.]
-                        \item[ii.]
-                        \item[iii.]
+                        \item[i.] For each node, the  incoming flow is equal to the outgoing flow.
+                        \item[ii.] \frameme{The total flow in each node es equal to its demand.}
+                        \item[iii.] For each cut, its size must be equal to the maximum flow.
                     \end{itemize}
-
-
     \end{itemize}
 \end{proof}
