Adding polyhedron dimension homework problem.

--- a/Guide/Guide.tex
+++ b/Guide/Guide.tex
@@ -143,8 +143,8 @@
                 \end{align}
                 is the dominant of the convex hull of
                     \begin{itemize}
-                        \item[i.] \frameme{The spanning trees of $G$ with root $r$.}
-                        \item[ii.] The arboreschence of $G$ with root $r$.
+                        \item[i.] The spanning trees of $G$ with root $r$.
+                        \item[ii.] \frameme{The arboreschence of $G$ with root $r$.}
                         \item[iii.] The branchings of $G$ with root $r$.
                     \end{itemize}
 
