--- a/document.tex
+++ b/document.tex
@@ -22,3 +22,4 @@
 \input{IncidenceMatrixOfDirectedGraphsAreUnimodular/IncidenceMatrixOfDirectedGraphsAreUnimodular.tex}
 \input{ShortestPath/ShortestPath.tex}
 \input{Guide/Guide.tex}
+\input{PolyhedronDimension/PolyhedronDimension.tex}
